force-app/main/default/objects/KDCE_DormantOrderLineItem__c/KDCE_DormantOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Dormant OrderLineItem</label>
    <nameField>
        <displayFormat>Dormant OLI{YY}{MM}{DD}{000000}</displayFormat>
        <label>Dormant OrderLineItem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dormant OrderLineItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>