force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/Codentify__c.field-meta.xml
<CustomField>
    <fullName>Codentify__c</fullName>
    <description>[KDCE] 시리얼 (Parent Codentify Id OR Codentify Id)
Mapping Column : codentify</description>
    <inlineHelpText>시리얼 (Parent Codentify Id OR Codentify Id)</inlineHelpText>
    <label>Codentify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>