force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/CollectionStatus__c.field-meta.xml
<CustomField>
    <fullName>CollectionStatus__c</fullName>
    <label>Collection Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>