force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/KDCE_MigId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MigId__c</fullName>
    <description>마이그 아이디</description>
    <label>MigId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>