force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/KDCE_OrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OrderLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>KDCE_OrderLineItem__c</referenceTo>
    <relationshipLabel>Dormant OrderLineItem</relationshipLabel>
    <relationshipName>Dormant_OrderLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>