force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/ProductGrossPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductGrossPrice__c</fullName>
    <description>[KDCE] 정상가-VAT포함
Mapping Column : product_gross_price</description>
    <inlineHelpText>정상가-VAT포함</inlineHelpText>
    <label>Product Gross Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>