force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/ProductItemDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProductItemDiscount__c</fullName>
    <description>[KDCE] 할인금액
Mapping Column : product_item_discount</description>
    <inlineHelpText>할인금액</inlineHelpText>
    <label>Product Item Discount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>