force-app/main/default/objects/KDCE_DormantOrderLineItem__c/fields/ProductTax__c.field-meta.xml
<CustomField>
    <fullName>ProductTax__c</fullName>
    <description>[KDCE] VAT 금액</description>
    <label>Product Tax</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>